# bazel-example-http-file-modules

./: README.md
client/: BUILD.bazel  MODULE.bazel  verify.sh
lib/: BUILD.bazel  MODULE.bazel  index.bzl  verify.sh
lib-srv/: .gitignore  go.mod  main.go  run.sh  verify.sh
